--- a/esercizi/pasts.css
+++ b/esercizi/pasts.css
@@ -1,28 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
 
 * {
-    font-family: 'Work Sans', sans-serif;
+  font-family: "Work Sans", sans-serif;
 }
 
 h1 {
-    text-align: center;
+  text-align: center;
 }
 
 .content {
-  
-    margin-left: 10px;
-    margin-right: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .es2 {
-    padding: 20px 10px 20px 10px;
+  padding: 20px 10px 10px 10px;
 }
 
-.es1{
-    padding: 20px 10px 20px 10px;
+.es1 {
+  padding: 20px 10px 10px 10px;
 }
 
 span {
-    font-size: 13px;
-    font-weight: bold;
+  font-size: 13px;
+  font-weight: bold;
 }
+
+button {
+  background-color: greenyellow;
+  font-size: large;
+}
+  
